[tool.poetry]
name = "kioku"
version = "0.1.0"
description = "kioku (記憶) a simple and customizable memory game"
authors = ["Daniele Tricoli <eriol@mornie.org>"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
kivymd = "^0.104.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-xdist = "^2.2.1"

[tool.poetry.scripts]
kioku = "kioku.main:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
