[tool.black]
line-length = 88
target-version = ["py38"]

[tool.isort]
profile = "black"

[tool.poetry]
name = "kioku"
version = "0.1.1"
description = "kioku (記憶) a simple and customizable memory game"
authors = ["Daniele Tricoli <eriol@mornie.org>"]
readme = "README.rst"
repository = "https://noa.mornie.org/eriol/kioku"
license = "GPL-3.0-or-later"
keywords = ["memory", "game"]

[tool.poetry.dependencies]
python = "^3.9"
Kivy = "^2.0.0"
kivymd = { url = "https://github.com/kivymd/KivyMD/archive/8f83652.zip" }
xdg = "^5.0.2"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
pytest-xdist = "^2.2.1"
Cython = "^0.29.23"
buildozer = "^1.2.0"

[tool.poetry.scripts]
kioku = "kioku.main:run"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
